test method of component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button (click)="getData()" #customBtn>Get data</button>
+<div>
+    <button (click)="getData()" #customBtn>Get data</button>
+</div>
 <app-my-component></app-my-component>
-<!-- <div>{{hiep.name}}</div> -->
-<div>{{dau.name}}</div>
